--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 		    <artifactId>spring-security-oauth2-autoconfigure</artifactId>
 		    <version>2.1.4.RELEASE</version>
 		</dependency>
+		<dependency>
+		  <groupId>net.bramp.ffmpeg</groupId>
+		  <artifactId>ffmpeg</artifactId>
+		  <version>0.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
