--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 		  <artifactId>ffmpeg</artifactId>
 		  <version>0.6.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.11.0</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
