fixes compilation errors in Spec classes

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 		    <version>2.11.0</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+		   <groupId>org.json</groupId>
+		   <artifactId>json</artifactId>
+		   <version>20080701</version>
+		</dependency>
 	</dependencies>
 
 	<build>
