--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 		   <artifactId>json</artifactId>
 		   <version>20080701</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.auth0</groupId>
+		    <artifactId>java-jwt</artifactId>
+		    <version>3.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
