--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,29 @@
 		    <artifactId>java-jwt</artifactId>
 		    <version>3.8.1</version>
 		</dependency>
+		
+		<!-- <dependency>
+		    <groupId>com.googlecode.soundlibs</groupId>
+		    <artifactId>tritonus-all</artifactId>
+		    <version>0.3.7.2</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.googlecode.soundlibs</groupId>
+		    <artifactId>mp3spi</artifactId>
+		    <version>1.9.5-1</version>
+		</dependency> -->
+		
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+	    </dependency>
+		
+		<dependency>
+		  <groupId>net.bramp.ffmpeg</groupId>
+		  <artifactId>ffmpeg</artifactId>
+		  <version>0.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
