--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,23 @@
 		   <artifactId>json</artifactId>
 		   <version>20080701</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.auth0</groupId>
+		    <artifactId>java-jwt</artifactId>
+		    <version>3.8.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+	    </dependency>
+		
+		<dependency>
+		  <groupId>net.bramp.ffmpeg</groupId>
+		  <artifactId>ffmpeg</artifactId>
+		  <version>0.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
