--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk-bom</artifactId>
+                <version>1.11.245</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 		 </dependencies>
 	</dependencyManagement>
 
@@ -37,10 +44,9 @@
 	    </dependency>
 	    
 	    <dependency>
-		    <groupId>com.amazonaws</groupId>
-		    <artifactId>aws-java-sdk</artifactId>
-		     <version>1.8.11</version>
-		</dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+        </dependency>
 			    
 
 		<dependency>
