--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,8 @@
 		<dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
-	    </dependency>
+		    <version>26.0-jre</version>
+		</dependency>
 		
 		<dependency>
 		  <groupId>net.bramp.ffmpeg</groupId>
