commits working impl of upload on linux

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,19 @@
 		  <artifactId>ffmpeg</artifactId>
 		  <version>0.6.2</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>5.5.2</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		  <groupId>com.mpatric</groupId>
+		  <artifactId>mp3agic</artifactId>
+		  <version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
