--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
 		  <artifactId>mp3agic</artifactId>
 		  <version>0.9.1</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
